--- a/src/cart/SConscript
+++ b/src/cart/SConscript
@@ -58,7 +58,6 @@ def scons():
 
     # Generate the common libraries used by everyone
     SConscript('swim/SConscript')
-    Default('swim')
 
     Import('env', 'prereqs', 'swim_targets', 'gurt_lib', 'CART_VERSION')
     Import('conf_dir')
@@ -70,7 +69,6 @@ def scons():
     env.AppendUnique(LINKFLAGS=["-Wl,-rpath-link=%s" % Dir('.').path])
     env.AppendUnique(CPPPATH=[Dir('.').srcnode()])
     env.AppendUnique(CPPPATH=[Dir('include').srcnode()])
-    env.AppendUnique(CPPPATH=[Dir('../gurt').srcnode()])
     for header in HEADERS:
         env.Install(os.path.join('$PREFIX', 'include', 'cart'),
                     os.path.join('../include', 'cart', header))
@@ -95,12 +93,10 @@ def scons():
 
     cart_lib = daos_build.library(denv, 'libcart', [cart_targets, swim_targets],
                                   SHLIBVERSION=CART_VERSION)
-    denv.Requires(cart_lib, [swim_targets, gurt_lib])
     denv.InstallVersionedLib('$PREFIX/lib64/', cart_lib,
                              SHLIBVERSION=CART_VERSION)
 
-    Default(cart_lib)
-    Export('cart_lib', 'cart_targets')
+    Export('cart_targets')
 
     if not env.GetOption('clean') and not env.GetOption('help'):
 
