--- a/src/utils/crt_launch/SConscript
+++ b/src/utils/crt_launch/SConscript
@@ -12,7 +12,7 @@ CRT_LAUNCH = 'crt_launch.c'
 
 def scons():
     """scons function"""
-    Import('env', 'prereqs', 'cart_lib', 'gurt_lib')
+    Import('env', 'prereqs')
 
     tenv = env.Clone()
 
@@ -24,15 +24,12 @@ def scons():
             print("Install and load mpich or openmpi\n")
             return
 
-    tenv.AppendUnique(CPPPATH=['#/src/cart'])
     tenv.AppendUnique(LIBS=libs)
     prereqs.require(tenv, 'mercury')
-    tenv.AppendUnique(LIBPATH=['#/src/cart'])
     tenv.AppendUnique(FLAGS='-pthread')
 
     crt_launch = daos_build.program(tenv, CRT_LAUNCH, LIBS=libs)
 
-    tenv.Requires(crt_launch, [cart_lib, gurt_lib])
     tenv.Install(os.path.join("$PREFIX", 'bin'), crt_launch)
 
 if __name__ == "SCons.Script":
