--- a/utils/docker/Dockerfile.centos.8
+++ b/utils/docker/Dockerfile.centos.8
@@ -220,19 +220,7 @@ ARG DAOS_BUILD=$DAOS_DEPS_BUILD
 
 # Build DAOS
 RUN [ "$DAOS_BUILD" != "yes" ] || \
-    { scons-3 --jobs $JOBS client install PREFIX=/opt/daos COMPILER=$COMPILER && \
-    utils/check.sh /opt/daos/bin/dmg && \
-    utils/check.sh -n /opt/daos/bin/daos_engine; }
-RUN [ "$DAOS_BUILD" != "yes" ] || \
-    { scons-3 --jobs $JOBS server install PREFIX=/opt/daos COMPILER=$COMPILER && \
-    utils/check.sh /opt/daos/bin/daos_engine && \
-    utils/check.sh -n /opt/daos/bin/vos_tests; }
-# Workaround missing SCons patch (https://github.com/SCons/scons/pull/3116) on
-# Centos 8 by not setting --jobs option for tests build.  It consistently
-# triggers this internal error in SCons.
-RUN [ "$DAOS_BUILD" != "yes" ] || \
-    { scons-3 test install PREFIX=/opt/daos COMPILER=$COMPILER && \
-    utils/check.sh /opt/daos/bin/vos_tests && \
+    { scons-3 --jobs $JOBS install PREFIX=/opt/daos COMPILER=$COMPILER && \
     /bin/rm -rf build && \
     cp -r utils/config/examples /opt/daos; }
 
