--- a/utils/nlt_server.yaml
+++ b/utils/nlt_server.yaml
@@ -17,6 +17,8 @@ engines:
   - CRT_CTX_SHARE_ADDR=0
   - FI_SOCKETS_MAX_CONN_RETRY=1
   - FI_SOCKETS_CONN_TIMEOUT=2000
-  scm_mount: /mnt/daos
-  scm_class: ram
-  scm_size: 32
+  storage:
+  -
+    class: ram
+    scm_mount: /mnt/daos
+    scm_size: 32
