--- a/debian/control
+++ b/debian/control
@@ -17,7 +17,7 @@ Build-Depends: debhelper (>= 10),
                python3-dev,
                python3-distro,
                libabt-dev,
-               libpmemobj-dev,
+               libpmemobj-dev (>= 1.11),
                libfuse3-dev,
                libprotobuf-c-dev,
                libjson-c-dev,
