DAOS-6799 build: Enable separate builds for DAOS components (#5699)
Add some targets (client, server, and test) to build

This allows developers to build client only, server only, and test targets
separately.  Test targets presently depend on client and server so building
test is the same as passing no arguments to the build.

Example:
scons client -j24 
scons client install -j24

This will only build and install client components.

Also cleans up some other build related things.

Signed-off-by: Jeff Olivier <jeffrey.v.olivier@intel.com>

--- a/src/dtx/SConscript
+++ b/src/dtx/SConscript
@@ -6,9 +6,14 @@ def scons():
     Import('env', 'prereqs')
 
     env.AppendUnique(LIBPATH=[Dir('.')])
+
+    if not prereqs.server_requested():
+        return
+
     denv = env.Clone()
 
     prereqs.require(denv, 'argobots', 'protobufc', 'hwloc')
+    prereqs.require(denv, 'pmdk', headers_only=True)
 
     # dtx
     denv.Append(CPPDEFINES=['-DDAOS_PMEM_BUILD'])
