--- a/src/rebuild/SConscript
+++ b/src/rebuild/SConscript
@@ -6,6 +6,10 @@ def scons():
     Import('env', 'prereqs')
 
     env.AppendUnique(LIBPATH=[Dir('.')])
+
+    if not prereqs.server_requested():
+        return
+
     denv = env.Clone()
 
     prereqs.require(denv, 'argobots', 'protobufc', 'hwloc')
