--- a/.github/workflows/ci2.yml
+++ b/.github/workflows/ci2.yml
@@ -77,10 +77,12 @@ jobs:
       run: ./utils/run_in_ga_wrapper.sh
     - name: Publish NLT test results
       if: always()
-      uses: EnricoMi/publish-unit-test-result-action@v1.7
+      uses: EnricoMi/publish-unit-test-result-action@v1.17
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
         files: nlt-junit.xml
+        comment_mode: off
+        fail_on: nothing
 
   Build:
     name: Build DAOS
