DAOS-623 build: Use 2.7 compatible raise_from function
Signed-off-by: Jeff Olivier <jeffrey.v.olivier@intel.com>

--- a/utils/docker/Dockerfile.centos.7
+++ b/utils/docker/Dockerfile.centos.7
@@ -131,6 +131,7 @@ RUN dnf -y install deltarpm && \
         python36-pyxattr \
         python36-PyYAML \
         python36-scons \
+        python36-future \
         sg3_utils \
         sudo \
         valgrind-devel \
