--- a/utils/docker/Dockerfile.centos.8
+++ b/utils/docker/Dockerfile.centos.8
@@ -141,6 +141,7 @@ RUN dnf -y upgrade && \
         python3-tabulate \
         python3-scons \
         python3-yaml \
+        python3-future \
         sg3_utils \
         sudo \
         valgrind-devel \
