--- a/utils/docker/Dockerfile.leap.15
+++ b/utils/docker/Dockerfile.leap.15
@@ -96,6 +96,7 @@ RUN zypper --non-interactive --gpg-auto-import-keys --no-gpg-checks ref && \
     python3-pyxattr  \
     python3-PyYAML \
     python3-tabulate \
+    python3-future \
     scons \
     sg3_utils \
     sudo \
