--- a/utils/docker/Dockerfile.checkpatch
+++ b/utils/docker/Dockerfile.checkpatch
@@ -16,7 +16,7 @@ ARG CB0
 RUN dnf -y upgrade &&						\
     dnf -y install codespell file findutils git			\
 	python3-clustershell python3-pygithub python3-numpy	\
-	python3-paramiko python3-pylint python3-pyxattr		\
+	python3-paramiko python3-pylint python3-future python3-pyxattr		\
 	python3-tabulate python-unversioned-command		\
 	python3-junit_xml ShellCheck &&				\
     dnf -y module enable avocado:latest &&			\
