Apply the TARGET_TYPE to all four distros.
Signed-off-by: Ashley Pittman <ashley.m.pittman@intel.com>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,11 +28,23 @@ jobs:
     - name: Build dependencies in Docker
       run: docker build . -f utils/docker/Dockerfile.${{ matrix.distro }}
                           --build-arg DEPS_JOBS=8 --build-arg DAOS_BUILD=no
-    - name: Build DAOS in Docker image with ${{ matrix.compiler }}
+    - name: Build DAOS in Docker image
       run: docker build . -f utils/docker/Dockerfile.${{ matrix.distro }}
                           --build-arg COMPILER=${{ matrix.compiler }}
                           --build-arg DEPS_JOBS=8 --build-arg DAOS_JAVA_BUILD=no
-    - name: Build DAOS Java client in Docker image with ${{ matrix.compiler }}
+    - name: Build DAOS Java client in Docker image
       run: docker build . -f utils/docker/Dockerfile.${{ matrix.distro }}
                           --build-arg COMPILER=${{ matrix.compiler }}
                           --build-arg DEPS_JOBS=8
+    - name: Build debug in docker
+      run: docker build . --file utils/docker/Dockerfile.${{ matrix.distro }}
+                          --build-arg DAOS_JAVA_BUILD=no
+                          --build-arg DEPS_JOBS=8
+                          --build-arg DAOS_BUILD_TYPE=debug
+                          --build-arg COMPILER=${{ matrix.compiler }}
+    - name: Build devel in docker
+      run: docker build . --file utils/docker/Dockerfile.${{ matrix.distro }}
+                          --build-arg DAOS_JAVA_BUILD=no
+                          --build-arg DEPS_JOBS=8
+                          --build-arg DAOS_BUILD_TYPE=dev
+                          --build-arg COMPILER=${{ matrix.compiler }}
