DAOS-7879 EC: refine EC degraded fetch with aggregation
As the aggregation runs asynchronously on different nodes, main race
conditions between aggregation and EC degraded fetch -
1. VOS may merge adjacent exts (now merge to lower epoch)
2. VOS may delete lower epoch ext when it is fully covered by higher
   epoch ext.
3. EC aggregation updates new parity exts asynchronously to different
   parity nodes

That async operation possibly cause the degraded fetch's data-recovery
handling - shadow epoch corresponding parity/data ext possibly not
readable and then cause silent data corruption in recovery.

This patch refine the handling of EC degraded fetch -
1. for step 1 in EC degraded fetch
   if fetch from snapshot and  “snapshot_epoch < vos_agg_eph_boundary”
      parity server replies snapshot_epoch as recovery epoch,
      Client will carry (ORF_EC_RECOV_SNAP | ORF_EC_RECOV) for data
      recovery
   else
      parity server replies max {parity_ext_epoch, vos_agg_eph_boundary}
      as recovery_epoch.
2. for step 2 in EC degraded fetch
   For some cases, need to internally restart the deg fetch from beginning -
   Server-side check -
   If no ORF_EC_RECOV_SNAP and current vos_agg_eph_boundary > recovery_epoch;
   Client-side check -
   If replied parity_epoch mismatch from different parity shards.

Fix a bug in agg_process_stripe() that did not set correct epoch range
when checking parity ext.

Signed-off-by: Xuezhao Liu <xuezhao.liu@intel.com>

--- a/src/tests/ftest/daos_test/daos_core_test.yaml
+++ b/src/tests/ftest/daos_test/daos_core_test.yaml
@@ -31,6 +31,7 @@ timeouts:
     test_daos_oid_allocator: 320
     test_daos_checksum: 500
     test_daos_rebuild_ec: 1800
+    test_daos_aggregate_ec: 200
     test_daos_degraded_ec_0to6: 900
     test_daos_degraded_ec_8to23: 950
     test_daos_dedup: 220
