--- a/src/engine/SConscript
+++ b/src/engine/SConscript
@@ -22,7 +22,7 @@ def scons():
     denv.AppendUnique(LINKFLAGS=['-rdynamic'])
 
     # Add runtime paths for daos libraries
-    denv.AppendUnique(RPATH_FULL=['$PREFIX/lib64/daos_srv'])
+    denv.AppendUnique(RPATH_FULL=['$PREFIX/lib64/daos_srv', '/usr/share/dpdk/lib'])
 
     # Generate I/O Engine program
     engine = daos_build.program(denv, 'daos_engine',
