--- a/src/object/tests/SConscript
+++ b/src/object/tests/SConscript
@@ -10,6 +10,7 @@ def scons():
     prereqs.require(unit_env, 'pmdk', headers_only=True)
 
     unit_env.Append(CPPDEFINES=['-DDAOS_PMEM_BUILD'])
+    unit_env.AppendUnique(RPATH_FULL=['/usr/share/dpdk/lib'])
     srv_checksum_tests = daos_build.test(unit_env, 'srv_checksum_tests',
                                          ['srv_checksum_tests.c',
                                           '../srv_csum.c'],
