--- a/src/control/SConscript
+++ b/src/control/SConscript
@@ -9,7 +9,7 @@ from os import urandom
 from binascii import b2a_hex
 
 Import('env', 'prereqs', 'daos_version', 'conf_dir',
-       'gurt_lib', 'daos_hdlrs_lib')
+       'gurt_lib')
 
 GO_COMPILER = 'go'
 MIN_GO_VERSION = '1.12.0'
@@ -198,6 +198,16 @@ def scons():
 
         AlwaysBuild([agentbin, dmgbin])
 
+        Import('daos_hdlrs_lib')
+        dbenv = denv.Clone()
+        dblibs = dbenv.subst("-L$BUILD_DIR/src/gurt "
+                            "-L$BUILD_DIR/src/cart "
+                            "-L$BUILD_DIR/src/client/dfs "
+                            "-L$BUILD_DIR/src/utils $_RPATH")
+        dbenv.AppendENVPath("CGO_LDFLAGS", dblibs, sep=" ")
+        daosbin = install_go_bin(dbenv, gosrc, [daos_hdlrs_lib], "daos", "daos")
+        AlwaysBuild([daosbin])
+
     if not prereqs.server_requested():
         return
 
@@ -206,15 +216,6 @@ def scons():
     prereqs.require(denv, 'spdk')
 
     denv.AppendENVPath("CGO_CFLAGS", denv.subst("$_CPPINCFLAGS"), sep=" ")
-
-    dbenv = denv.Clone()
-    dblibs = dbenv.subst("-L$BUILD_DIR/src/gurt "
-                         "-L$BUILD_DIR/src/cart "
-                         "-L$BUILD_DIR/src/client/dfs "
-                         "-L$BUILD_DIR/src/utils $_RPATH")
-    dbenv.AppendENVPath("CGO_LDFLAGS", dblibs, sep=" ")
-    daosbin = install_go_bin(dbenv, gosrc, [daos_hdlrs_lib], "daos", "daos")
-    AlwaysBuild([daosbin])
 
     SConscript('lib/spdk/SConscript', exports='denv')
 
