--- a/src/tests/ftest/daos_test/daos_core_test.yaml
+++ b/src/tests/ftest/daos_test/daos_core_test.yaml
@@ -90,8 +90,8 @@ daos_tests:
     test_daos_distributed_tx: DAOS_Distributed_TX
     test_daos_verify_consistency: DAOS_Verify_Consistency
     test_daos_io: DAOS_IO
-    test_daos_ec_io: DAOS_EC_IO
-    test_daos_ec_obj: DAOS_EC_OBJ
+    test_daos_ec_io: DAOS_IO_EC_4P2G1
+    test_daos_ec_obj: DAOS_EC
     test_daos_object_array: DAOS_Object_Array
     test_daos_array: DAOS_Array
     test_daos_kv: DAOS_KV
