Moved specifying TestPool autosizing into the avocado test yaml.
Test-tag: pool_create_tests dmg_system_reformat ec_ior ec_mdtest

Signed-off-by: Phillip Henderson <phillip.henderson@intel.com>

--- a/src/tests/ftest/control/dmg_system_reformat.yaml
+++ b/src/tests/ftest/control/dmg_system_reformat.yaml
@@ -12,5 +12,7 @@ server_config:
     bdev_class: nvme
     bdev_list: ["aaaa:aa:aa.a","bbbb:bb:bb.b"]
 pool:
-  control_method: dmg
   name: daos_server
+  control_method: dmg
+  scm_size: 90%
+  nvme_size: 90%
