--- a/src/tests/ftest/erasurecode/ec_ior_smoke.yaml
+++ b/src/tests/ftest/erasurecode/ec_ior_smoke.yaml
@@ -39,11 +39,10 @@ server_config:
       scm_mount: /mnt/daos1
       log_mask: ERR
 pool:
-    mode: 146
     name: daos_server
-    scm_size: 200G
-    nvme_size: 700G
     control_method: dmg
+    size: 93%
+    scm_ratio: 28
 container:
     type: POSIX
     control_method: daos
