--- a/src/tests/ftest/soak/soak_smoke.yaml
+++ b/src/tests/ftest/soak/soak_smoke.yaml
@@ -5,6 +5,12 @@ hosts:
         - server-B
         - server-C
         - server-D
+        - server-E
+        - server-F
+        - server-G
+        - server-H
+        - server-I
+        - server-J
 # servers if a server partition is defined
     # server_partition: daos_server
     client_partition: daos_client
@@ -18,28 +24,48 @@ setup:
     start_servers: True
     start_agents: True
 server_config:
+    engines_per_host: 2
     name: daos_server
-    provider: ofi+sockets
+    provider: ofi+verbs;ofi_rxm
     nr_hugepages: 8192
     control_log_mask: INFO
     control_log_file: daos_control0.log
     servers:
-        log_mask: ERR
-        fabric_iface: ib0
-        fabric_iface_port: 31416
-        log_mask: ERR
-        log_file: daos_io0.log
-        # Storage definitions for AEP and NVMe
-        scm_mount: /mnt/daos0
-        scm_class: dcpm
-        scm_list: [/dev/pmem0]
-        bdev_class: nvme
-        bdev_list: ["aaaa:aa:aa.a","bbbb:bb:bb.b"]
+        0:
+            targets: 4
+            pinned_numa_node: 0
+            nr_xs_helpers: 1
+            fabric_iface: ib0
+            fabric_iface_port: 31317
+            log_file: daos_server0.log
+            bdev_class: nvme
+            bdev_list: ["aaaa:aa:aa.a","bbbb:bb:bb.b"]
+            scm_class: dcpm
+            scm_list: ["/dev/pmem0"]
+            scm_mount: /mnt/daos0
+            log_mask: ERR
+            env_vars:
+                - FI_UNIVERSE_SIZE=2048
+        1:
+            targets: 4
+            pinned_numa_node: 1
+            nr_xs_helpers: 1
+            fabric_iface: ib1
+            fabric_iface_port: 31417
+            log_file: daos_server1.log
+            bdev_class: nvme
+            bdev_list: ["cccc:cc:cc.c","dddd:dd:dd.d"]
+            scm_class: dcpm
+            scm_list: ["/dev/pmem1"]
+            scm_mount: /mnt/daos1
+            log_mask: ERR
+            env_vars:
+                - FI_UNIVERSE_SIZE=2048
     transport_config:
-      allow_insecure: True
+        allow_insecure: True
 agent_config:
     transport_config:
-      allow_insecure: True
+        allow_insecure: True
 dmg:
     transport_config:
       allow_insecure: True
@@ -47,8 +73,8 @@ dmg:
 pool_jobs:
     mode: 146
     name: daos_server
-    scm_size: 40GB
-    nvme_size: 100GB
+    scm_size: 30GB
+    nvme_size: 500GB
     svcn: 1
     control_method: dmg
 pool_reserved:
@@ -60,12 +86,10 @@ pool_reserved:
 container:
     type: POSIX
     properties: cksum:crc16,cksum_size:16384,srv_cksum:on
-    oclass: SX
     control_method: daos
 container_reserved:
     type: POSIX
     properties: cksum:crc16,cksum_size:16384,srv_cksum:on
-    oclass: SX
     control_method: daos
 # test_params - Defines the type of test to run and how long it runs
 #               It also defines how many pools and jobs to create
@@ -117,9 +141,11 @@ ior_smoke:
         - '1m'
     segment_count: 1
     dfs_oclass:
-        - 'SX'
-    dfs_dir_oclass:
-        - 'SX'
+        - "EC_2P1GX"
+#        - "EC_4P1G1"
+#        - "EC_4P2GX"
+#        - "EC_8P2G1"
+#        - "EC_16P2GX"
     dfuse:
         mount_dir: "/tmp/daos_dfuse/ior/"
         disable_caching: True
@@ -147,10 +173,13 @@ fio_smoke:
             - 'rw'
             - 'randrw'
         oclass:
-            - 'SX'
+            - "EC_2P1GX"
+#            - "EC_4P1G1"
+#            - "EC_4P2GX"
+#            - "EC_8P2G1"
+#            - "EC_16P2GX"
     dfuse:
         mount_dir: "/tmp/daos_dfuse/fio/"
-        disable_wb_caching: True
 daos_racer:
     runtime: 120
     container:
@@ -178,8 +207,12 @@ mdtest_smoke:
         - 4096
     depth:
         - 0
-    dfs_oclass: 'SX'
-    dfs_dir_oclass: 'S1'
+    dfs_oclass:
+        - "EC_2P1GX"
+#        - "EC_4P1G1"
+#        - "EC_4P2GX"
+#        - "EC_8P2G1"
+#        - "EC_16P2GX"
     dfs_destroy: False
     dfuse:
         mount_dir: "/tmp/daos_dfuse/mdtest/"
