DAOS-7813 Build: Local repos for RPM builds
This modifies the RPM build procedure to optionally use local repositories
for the distro provided packages if they are available.

This allows pinning the actual verision for CentOS releases.

Support for leap 15.3 RPM building has been added.
Support for leap 15.1 RPM building has been removed.

Signed-off-by: John E Malmberg <john.e.malmberg@intel.com>

--- a/utils/rpms/packaging/Dockerfile.mockbuild
+++ b/utils/rpms/packaging/Dockerfile.mockbuild
@@ -28,4 +28,4 @@ RUN usermod -a -G mock $USER
 RUN grep use_nspawn /etc/mock/site-defaults.cfg || \
     echo "config_opts['use_nspawn'] = False" >> /etc/mock/site-defaults.cfg
 
-RUN chmod g+w /etc/mock/*
+RUN chmod g+w /etc/mock; chgrp mock /etc/mock
