--- a/src/tests/ftest/rebuild/container_create.yaml
+++ b/src/tests/ftest/rebuild/container_create.yaml
@@ -15,7 +15,7 @@ server_config:
 pool:
   mode: 511
   name: daos_server
-  scm_size: 8589934592
+  scm_size: 30G 
   svcn: 1
   control_method: dmg
   pool_query_timeout: 30
