Restarting servers for each variant in hopes of capturing log data.
Quick-Functional: true
Test-tag: volunit

Signed-off-by: Phillip Henderson <phillip.henderson@intel.com>

--- a/src/tests/ftest/daos_vol/daos_vol.yaml
+++ b/src/tests/ftest/daos_vol/daos_vol.yaml
@@ -4,6 +4,9 @@ hosts:
     test_clients:
         - client-B
 timeout: 1000
+setup:
+    start_agents_once: False
+    start_servers_once: False
 job_manager_timeout: 900
 server_config:
     name: daos_server
