DAOS-5363-test: Triage and investigate 16 functional tests failed on secure-mode
     modified:   daos_admin_privileged.yaml
     modified:   daos_agent_config.yaml
     modified:   daos_control_config.yaml
     modified:   dmg_network_scan.yaml
     modified:   dmg_nvme_scan_test.yaml
     modified:   dmg_pool_query_test.yaml

Test-tag: dmg
Signed-off-by: Ding Ho <ding-hwa.ho@intel.com>

--- a/src/tests/ftest/control/dmg_nvme_scan_test.yaml
+++ b/src/tests/ftest/control/dmg_nvme_scan_test.yaml
@@ -8,14 +8,14 @@ server_config:
   name: daos_server
   port: 10001
   transport_config:
-    allow_insecure: True
+    allow_insecure: False
 agent_config:
   transport_config:
-    allow_insecure: True
+    allow_insecure: False
 dmg:
   dmg_sub_command: storage
   storage:
     storage_sub_command: scan
-  insecure: True
+  insecure: False
   transport_config:
-    allow_insecure: True
+    allow_insecure: False
