--- a/src/tests/ftest/control/daos_control_config.yaml
+++ b/src/tests/ftest/control/daos_control_config.yaml
@@ -9,13 +9,13 @@ timeout: 60
 server_config:
   name: daos_server
   transport_config:
-    allow_insecure: True
+    allow_insecure: False
 agent_config:
   transport_config:
-    allow_insecure: True
+    allow_insecure: False
 dmg:
   transport_config:
-    allow_insecure: True
+    allow_insecure: False
 # The 'config_val' list is composed of the following values:
 # - name of the config attribute, used to look for the attribute object
 # - test value that will be inserted into the agent config for the attribute
