--- a/src/tests/ftest/control/dmg_network_scan.yaml
+++ b/src/tests/ftest/control/dmg_network_scan.yaml
@@ -9,10 +9,10 @@ server_config:
   port: 10001
   control_log_mask: INFO
   transport_config:
-    allow_insecure: True
+    allow_insecure: False
 agent_config:
   transport_config:
-    allow_insecure: True
+    allow_insecure: False
 dmg:
   transport_config:
-    allow_insecure: True
+    allow_insecure: False
