--- a/src/tests/ftest/io/hdf5.yaml
+++ b/src/tests/ftest/io/hdf5.yaml
@@ -12,13 +12,13 @@ server_config:
         scm_class: dcpm
         scm_list: ["/dev/pmem0"]
     transport_config:
-        allow_insecure: True
+        allow_insecure: False
 agent_config:
     transport_config:
-        allow_insecure: True
+        allow_insecure: False
 dmg:
     transport_config:
-        allow_insecure: True
+        allow_insecure: False
 pool:
     mode: 146
     name: daos_server
