DAOS-5363-test-osa: Triage and investigate 16 functional tests failed on secure-mode
     modified:   ../daos_test/daos_core_test.yaml
     modified:   ../nvme/nvme_object.yaml
     modified:   ../osa/osa_offline_reintegration.yaml

Test-tag: nvme_object,offline_reintegration_multiple_pools,daos_core_test
Signed-off-by: Ding Ho <ding-hwa.ho@intel.com>

--- a/src/tests/ftest/daos_test/daos_core_test.yaml
+++ b/src/tests/ftest/daos_test/daos_core_test.yaml
@@ -71,13 +71,13 @@ server_config:
       env_vars:
         - DD_MASK=mgmt,io,md,epc,rebuild
   transport_config:
-    allow_insecure: True
+    allow_insecure: False
 agent_config:
   transport_config:
-    allow_insecure: True
+    allow_insecure: False
 dmg:
   transport_config:
-    allow_insecure: True
+    allow_insecure: False
 daos_tests:
   num_clients: 1
   test_name:
