--- a/src/tests/SConscript
+++ b/src/tests/SConscript
@@ -22,7 +22,7 @@ def scons():
             return
 
     # Add runtime paths for daos libraries
-    denv.AppendUnique(RPATH_FULL=['$PREFIX/lib64/daos_srv', '/usr/share/dpdk/lib'])
+    denv.AppendUnique(RPATH_FULL=['$PREFIX/lib64/daos_srv'])
 
     denv.Append(CPPPATH=[Dir('suite').srcnode()])
     prereqs.require(denv, 'argobots', 'hwloc', 'protobufc', 'pmdk')
