--- a/src/vos/tests/SConscript
+++ b/src/vos/tests/SConscript
@@ -12,7 +12,7 @@ def scons():
     prereqs.require(denv, 'argobots')
 
     # Add runtime paths for daos libraries
-    denv.AppendUnique(RPATH_FULL=['$PREFIX/lib64/daos_srv', '/usr/share/dpdk/lib'])
+    denv.AppendUnique(RPATH_FULL=['$PREFIX/lib64/daos_srv'])
     vtsenv = denv.Clone()
     vtsenv.Append(CPPDEFINES={'VOS_UNIT_TEST' : '1'})
 
