--- a/utils/build.config
+++ b/utils/build.config
@@ -6,7 +6,7 @@ ARGOBOTS = v1.1
 PMDK = 1.11.0-rc1
 ISAL = v2.30.0
 ISAL_CRYPTO = v2.23.0
-SPDK = master
+SPDK = 9d4fbc135d6136b84b992c9ef373160eb7f0d6f5
 OFI = v1.12.0
 OPENPA = v1.0.4
 MERCURY = v2.0.1rc1
