--- a/src/tests/ftest/erasurecode/ec_ior_smoke.yaml
+++ b/src/tests/ftest/erasurecode/ec_ior_smoke.yaml
@@ -41,8 +41,8 @@ server_config:
 pool:
     name: daos_server
     control_method: dmg
-    size: 93%
-    scm_ratio: 28
+    scm_size: 25%
+    nvme_size: 93%
 container:
     type: POSIX
     control_method: daos
