--- a/.github/workflows/ci2.yml
+++ b/.github/workflows/ci2.yml
@@ -73,7 +73,7 @@ jobs:
                           --build-arg DAOS_BUILD=no
                           --build-arg DEPS_JOBS=10
                           --tag build-image
-    - name: Run
+    - name: Build and Test
       run: ./utils/run_in_ga_wrapper.sh
     - name: Publish NLT test results
       if: always()
