change compress to compression in yaml
Test-tag: pr dm_dst_create fs_copy

Signed-off-by: Danielle Sikich <danielle.sikich@intel.com>

--- a/src/tests/ftest/datamover/dm_dst_create.yaml
+++ b/src/tests/ftest/datamover/dm_dst_create.yaml
@@ -14,7 +14,7 @@ pool:
 container:
     control_method: daos
     properties:
-        - compress:lz4
+        - compression:lz4
 ior:
     client_processes:
         np: 1
