DAOS-7821 ga: Add github actins builds for Fedora 34.
Use the CentOS 8 Dockerfile, but set the base distro
as a build-arg.

Signed-off-by: Ashley Pittman <ashley.m.pittman@intel.com>

--- a/utils/docker/Dockerfile.centos.8
+++ b/utils/docker/Dockerfile.centos.8
@@ -6,7 +6,8 @@
 #
 
 # Pull base image
-FROM centos:8
+ARG BASE_DISTRO=centos:8
+FROM $BASE_DISTRO
 LABEL maintainer="daos@daos.groups.io"
 
 # Intermittent cache-bust.  Used to reduce load on the actual CACHEBUST later.
